Adding support for a fully local contiv component install

--- a/install/ansible/Dockerfile
+++ b/install/ansible/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER contiv
 
 # TODO: Replace this with a specific contiv/ansible release version
 # Get the ansible scripts required for both netplugin docker & for k8s contrib
-RUN git clone http://github.com/contiv/ansible
+RUN git clone http://github.com/neelimamukiri/ansible -b local_images
 
 RUN wget -c https://raw.githubusercontent.com/neelimamukiri/demo/master/net/extras/genInventoryFile.py
 RUN chmod +x genInventoryFile.py
