--- a/install/ansible/Dockerfile.base
+++ b/install/ansible/Dockerfile.base
@@ -1,7 +1,7 @@
 FROM alpine
 MAINTAINER contiv
 
-RUN apk --update add python openssl ca-certificates git
+RUN apk --update add python openssl ca-certificates curl git
 RUN apk --update add --virtual build-dependencies \
                 python-dev libffi-dev openssl-dev build-base
 RUN apk --update add py2-pip
