--- a/install/ansible/cfg.yml
+++ b/install/ansible/cfg.yml
@@ -6,3 +6,21 @@ CONNECTION_INFO:
   192.168.2.13:
         control: eth1
         data: eth2
+APIC_URL: "https://10.193.231.33:443"
+APIC_USERNAME: "admin"
+APIC_PASSWORD: "ins3965!"
+APIC_PHYS_DOMAIN: "TEST-Phys-Dom"
+APIC_EPG_BRIDGE_DOMAIN: "not_specified"
+APIC_CONTRACTS_UNRESTRICTED_MODE: "no"
+
+# The following two settings are for cases where BD has to be pre-defined.
+# If you don't know what this means, then you probably need to leave it
+# with the default values given below.
+APIC_EPG_BRIDGE_DOMAIN: "not_specified"
+APIC_CONTRACTS_UNRESTRICTED_MODE: "no"
+
+# Full path of the leaf nodes connected to your servers.
+# List each node on a new line as shown commented
+APIC_LEAF_NODES:
+    - topology/pod-1/node-101
+    - topology/pod-1/node-102
